log
Wed 08 May 2024 02:57:08 PM UTC: 
 tests:  1|8
total_score: 0/70
ce07a09
Wed 08 May 2024 02:59:45 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
2100ff5
Wed 08 May 2024 03:04:35 PM UTC: 
 tests:  4|7
total_score: 5/70
e535273
Wed 08 May 2024 03:07:34 PM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
25cd2aa
Wed 08 May 2024 03:08:16 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  7|6
total_score: 5/70
e668964
Wed 08 May 2024 03:09:47 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|6
total_score: 5/70
03a9979
Wed 08 May 2024 03:11:06 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  7|6
total_score: 5/70
b2ee11a
Wed 08 May 2024 03:17:03 PM UTC: 
 treemap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   57 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
5c8afc7
Wed 08 May 2024 03:19:19 PM UTC: 
 treemap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   57 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
d6fc0cd
Wed 08 May 2024 03:19:42 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:13: error: ‘parent’ undeclared (first use in this function)
   59 |             parent = aux;
      |             ^~~~~~
treemap.c:59:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4cf3c7f
Wed 08 May 2024 03:19:52 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|6
total_score: 5/70
7cc7bbc
Wed 08 May 2024 03:20:22 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|6
total_score: 5/70
ac2aac5
Wed 08 May 2024 03:20:32 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|6
total_score: 5/70
9724b75
Wed 08 May 2024 03:26:37 PM UTC: 
 treemap.c | 25 +++++++------------------
 1 file changed, 7 insertions(+), 18 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:9: error: expected expression before ‘)’ token
   52 |     if ()
      |         ^
Compilation failed
07a853e
Wed 08 May 2024 03:27:05 PM UTC: 
 treemap.c | 16 ++--------------
 1 file changed, 2 insertions(+), 14 deletions(-)
 tests:  9|5
total_score: 10/70
b5c2db1
Wed 08 May 2024 03:30:20 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  14|4
total_score: 25/70
64bd36c
Wed 08 May 2024 03:32:25 PM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|0
3c8e126
Wed 08 May 2024 03:35:22 PM UTC: 
 treemap.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  14|4
total_score: 25/70
f9c0db9
Wed 08 May 2024 03:35:53 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  14|4
total_score: 25/70
6cc1531
Wed 08 May 2024 03:38:09 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
76db871
Wed 08 May 2024 03:39:28 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
091bb37
Wed 08 May 2024 03:41:38 PM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|0
8f367dc
Wed 08 May 2024 03:42:10 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘eraseTreeMap’:
treemap.c:88:15: error: unused variable ‘node’ [-Werror=unused-variable]
   88 |     TreeNode* node = tree->current;
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
c14635b
Wed 08 May 2024 03:42:19 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|4
total_score: 25/70
07b9573
Wed 08 May 2024 03:50:28 PM UTC: 
 treemap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:104:1: error: control reaches end of non-void function [-Werror=return-type]
  104 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b72e613
Wed 08 May 2024 03:54:38 PM UTC: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  20|3
total_score: 35/70
5cc03d2
Wed 08 May 2024 03:55:36 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  20|3
total_score: 35/70
bfee4d8
Wed 08 May 2024 03:57:05 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   57 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
150fe9c
Wed 08 May 2024 03:57:45 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  21|3
total_score: 35/70
9a3aab0
Wed 08 May 2024 03:58:31 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:4:
treemap.c:73:1: error: expected identifier or ‘(’ before ‘}’ token
   73 | }
      | ^
Compilation failed
2f361b2
Wed 08 May 2024 03:58:39 PM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  20|3
total_score: 35/70
5e15ec0
Wed 08 May 2024 03:59:12 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  21|3
total_score: 35/70
59e8668
Wed 08 May 2024 04:04:13 PM UTC: 
 treemap.c | 24 +-----------------------
 1 file changed, 1 insertion(+), 23 deletions(-)
 tests:  20|3
total_score: 35/70
1909f5c
Wed 08 May 2024 04:05:53 PM UTC: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  21|3
total_score: 35/70
5ebe3e7
Wed 08 May 2024 04:08:10 PM UTC: 
 treemap.c | 38 +++++++++++++++++++++++++++++---------
 1 file changed, 29 insertions(+), 9 deletions(-)
 tests:  21|3
total_score: 35/70
aa7afed
Wed 08 May 2024 04:12:01 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  22|2
total_score: 45/70
8373ef9
Wed 08 May 2024 04:16:23 PM UTC: 
 treemap.c | 28 +++++++++-------------------
 1 file changed, 9 insertions(+), 19 deletions(-)
 tests:  22|2
total_score: 45/70
d8427d4
